--- a/generic-alex/preseed.cfg
+++ b/generic-alex/preseed.cfg
@@ -28,13 +28,14 @@ d-i clock-setup/ntp boolean true
 
 # User account setup
 d-i passwd/root-login boolean false
+d-i passwd/user-fullname string Alex User
 d-i passwd/username string alex
 d-i passwd/user-password password password
 d-i passwd/user-password-again password password
 d-i passwd/user-default-groups string audio cdrom video sudo
 d-i user-setup/allow-password-weak boolean true
 
-# Partitioning - Use entire first disk (/dev/sda)
+# Partitioning - Use entire first disk (/dev/sda) with UEFI
 d-i partman-auto/disk string /dev/sda
 d-i partman-auto/method string regular
 d-i partman-auto/choose_recipe select atomic
@@ -47,6 +48,27 @@ d-i partman-auto/choose_partition select finish
 d-i partman/confirm_write_new_label boolean true
 d-i partman/confirm boolean true
 d-i partman/confirm_nooverwrite boolean true
+
+# UEFI/EFI configuration - Force UEFI mode
+d-i partman-efi/non_efi_system boolean true
+d-i partman-auto/expert_recipe string                         \
+      boot-root ::                                            \
+              1 1 1 free                                      \
+                      $iflabel{ gpt }                         \
+                      $reusemethod{ }                         \
+                      method{ efi }                           \
+                      format{ }                               \
+              .                                               \
+              128 512 1024 fat32                             \
+                      $primary{ } $bootable{ }                \
+                      method{ efi }                           \
+                      format{ }                               \
+              .                                               \
+              1000 50000 1000000000 ext4                     \
+                      method{ format } format{ }              \
+                      use_filesystem{ } filesystem{ ext4 }    \
+                      mountpoint{ / }                         \
+              .
 
 # Package selection - Server install with SSH, no GUI
 tasksel tasksel/first multiselect standard, ssh-server
@@ -66,10 +88,11 @@ d-i pkgsel/include string \
 d-i pkgsel/update-policy select none
 d-i pkgsel/upgrade select full-upgrade
 
-# Boot loader installation
+# Boot loader installation - Force UEFI
 d-i grub-installer/only_debian boolean true
 d-i grub-installer/with_other_os boolean true
-d-i grub-installer/bootdev string /dev/sda
+d-i grub-installer/bootdev string default
+d-i grub-installer/force-efi-extra-removable boolean true
 
 # Skip popularity contest
 popularity-contest popularity-contest/participate boolean false
