--- a/generic-alex/preseed.cfg
+++ b/generic-alex/preseed.cfg
@@ -26,6 +26,24 @@ d-i time/zone string Europe/Stockholm
 d-i clock-setup/utc boolean true
 d-i clock-setup/ntp boolean true
 
+# Detect largest non-removable disk
+d-i preseed/early_command string \
+    for disk in $(lsblk -ndo NAME -e7); do \
+        if [ "$(cat /sys/block/$disk/removable 2>/dev/null || echo 0)" = "0" ]; then \
+            INTERNAL_DISKS="$INTERNAL_DISKS /dev/$disk"; \
+        fi; \
+    done; \
+    LARGEST_DISK=$(echo $INTERNAL_DISKS | tr ' ' '\n' | while read disk; do \
+        if [ -n "$disk" ]; then \
+            SIZE=$(lsblk -ndo SIZE "$disk" | sed 's/[^0-9.]//g'); \
+            echo "$SIZE $disk"; \
+        fi; \
+    done | sort -n | tail -1 | awk '{print $2}'); \
+    if [ -n "$LARGEST_DISK" ]; then \
+        debconf-set partman-auto/disk "$LARGEST_DISK"; \
+        echo "Selected disk: $LARGEST_DISK" > /tmp/selected-disk.log; \
+    fi
+
 # User account setup
 d-i passwd/root-login boolean false
 d-i passwd/user-fullname string Alex User
@@ -35,7 +53,7 @@ d-i passwd/user-password-again password password
 d-i passwd/user-default-groups string audio cdrom video sudo
 d-i user-setup/allow-password-weak boolean true
 
-# Partitioning - Use entire first disk (/dev/sda) with UEFI
+# Partitioning - Will be overridden by early_command
 d-i partman-auto/disk string /dev/sda
 d-i partman-auto/method string regular
 d-i partman-auto/choose_recipe select atomic
@@ -117,4 +135,5 @@ d-i preseed/late_command string \
     in-target chmod 600 /home/alex/.ssh/authorized_keys; \
     in-target systemctl reload ssh; \
     in-target apt-get clean; \
+    cp /tmp/selected-disk.log /target/tmp/selected-disk.log 2>/dev/null || true; \
     echo "Debian server installation completed" > /target/tmp/install-complete.log
