added uefi handling

--- a/thinkpad-alex/preseed.cfg
+++ b/thinkpad-alex/preseed.cfg
@@ -31,22 +31,45 @@ d-i clock-setup/utc boolean true
 d-i time/zone string Europe/Stockholm
 d-i clock-setup/ntp boolean true
 
-### Partitioning
+### Partitioning - UEFI compatible
 # Automatically select the first detected disk
 d-i partman-auto/disk string /dev/sda /dev/nvme0n1 /dev/vda
+
+# Use GPT partition table for UEFI
+d-i partman-partitioning/default_label string gpt
+
+# Guided partitioning method
 d-i partman-auto/method string regular
 
-# Use entire disk with guided partitioning
+# Use entire disk with UEFI-compatible recipe
 d-i partman-auto/choose_recipe select atomic
 
+# Custom recipe for UEFI systems
+d-i partman-auto/expert_recipe string                         \
+      boot-root ::                                            \
+              538 538 1075 free                               \
+                      $iflabel{ gpt }                         \
+                      $reusemethod{ }                         \
+                      method{ efi }                           \
+                      format{ }                               \
+              .                                               \
+              128 512 300% linux-swap                        \
+                      $primary{ } method{ swap }              \
+                      format{ }                               \
+              .                                               \
+              500 10000 1000000000 ext4                      \
+                      $primary{ } $bootable{ }               \
+                      method{ format } format{ }              \
+                      use_filesystem{ } filesystem{ ext4 }    \
+                      mountpoint{ / }                         \
+              .
+
 # Confirm partitioning choices
+d-i partman-efi/non_efi_system boolean true
 d-i partman-partitioning/confirm_write_new_label boolean true
 d-i partman/choose_partition select finish
 d-i partman/confirm boolean true
 d-i partman/confirm_nooverwrite boolean true
-
-# Don't show manual partitioning screen
-d-i partman-auto/expert_recipe string
 
 ### Base system installation
 d-i base-installer/install-recommends boolean true
@@ -64,17 +87,14 @@ d-i pkgsel/include string firmware-iwlwifi firmware-linux laptop-mode-tools tlp 
 d-i pkgsel/upgrade select full-upgrade
 popularity-contest popularity-contest/participate boolean false
 
-### Boot loader installation
+### Boot loader installation - UEFI compatible
 d-i grub-installer/only_debian boolean true
 d-i grub-installer/with_other_os boolean true
 d-i grub-installer/bootdev string default
+d-i grub-installer/force-efi-extra-removable boolean true
 
 ### Hardware-specific settings for ThinkPads
-# Enable microcode updates
-d-i pkgsel/include string intel-microcode
-
-# Additional ThinkPad-friendly packages
-d-i pkgsel/include string thermald acpi-support
+d-i pkgsel/include string intel-microcode thermald acpi-support
 
 ### Post-installation commands
 d-i preseed/late_command string \
