now with wiping

--- a/thinkpad-alex/preseed.cfg
+++ b/thinkpad-alex/preseed.cfg
@@ -31,45 +31,36 @@ d-i clock-setup/utc boolean true
 d-i time/zone string Europe/Stockholm
 d-i clock-setup/ntp boolean true
 
+### Early command to wipe disk
+d-i partman/early_command string \
+    debconf-set partman-auto/disk "$(list-devices disk | head -n1)" ; \
+    DISK="$(list-devices disk | head -n1)" ; \
+    dd if=/dev/zero of=$DISK bs=1M count=10 ; \
+    parted -s $DISK mklabel gpt
+
 ### Partitioning - UEFI compatible
-# Automatically select the first detected disk
-d-i partman-auto/disk string /dev/sda /dev/nvme0n1 /dev/vda
-
-# Use GPT partition table for UEFI
-d-i partman-partitioning/default_label string gpt
-
-# Guided partitioning method
+# Let the early command set the disk
 d-i partman-auto/method string regular
 
-# Use entire disk with UEFI-compatible recipe
+# Force GPT for UEFI
+d-i partman-basicfilesystems/choose_label string gpt
+d-i partman-basicfilesystems/default_label string gpt
+d-i partman-partitioning/choose_label string gpt
+d-i partman-partitioning/default_label string gpt
+
+# Simple atomic recipe that should work with UEFI
 d-i partman-auto/choose_recipe select atomic
 
-# Custom recipe for UEFI systems
-d-i partman-auto/expert_recipe string                         \
-      boot-root ::                                            \
-              538 538 1075 free                               \
-                      $iflabel{ gpt }                         \
-                      $reusemethod{ }                         \
-                      method{ efi }                           \
-                      format{ }                               \
-              .                                               \
-              128 512 300% linux-swap                        \
-                      $primary{ } method{ swap }              \
-                      format{ }                               \
-              .                                               \
-              500 10000 1000000000 ext4                      \
-                      $primary{ } $bootable{ }               \
-                      method{ format } format{ }              \
-                      use_filesystem{ } filesystem{ ext4 }    \
-                      mountpoint{ / }                         \
-              .
-
-# Confirm partitioning choices
+# Alternative: force all confirmations
 d-i partman-efi/non_efi_system boolean true
 d-i partman-partitioning/confirm_write_new_label boolean true
 d-i partman/choose_partition select finish
 d-i partman/confirm boolean true
 d-i partman/confirm_nooverwrite boolean true
+d-i partman-md/confirm boolean true
+d-i partman-md/confirm_nooverwrite boolean true
+d-i partman-lvm/confirm boolean true
+d-i partman-lvm/confirm_nooverwrite boolean true
 
 ### Base system installation
 d-i base-installer/install-recommends boolean true
@@ -83,18 +74,14 @@ d-i apt-setup/non-free-firmware boolean true
 
 ### Package selection
 tasksel tasksel/first multiselect standard, desktop-environment
-d-i pkgsel/include string firmware-iwlwifi firmware-linux laptop-mode-tools tlp powertop openssh-server
+d-i pkgsel/include string firmware-iwlwifi firmware-linux laptop-mode-tools tlp powertop openssh-server intel-microcode thermald acpi-support
 d-i pkgsel/upgrade select full-upgrade
 popularity-contest popularity-contest/participate boolean false
 
-### Boot loader installation - UEFI compatible
+### Boot loader installation
 d-i grub-installer/only_debian boolean true
 d-i grub-installer/with_other_os boolean true
 d-i grub-installer/bootdev string default
-d-i grub-installer/force-efi-extra-removable boolean true
-
-### Hardware-specific settings for ThinkPads
-d-i pkgsel/include string intel-microcode thermald acpi-support
 
 ### Post-installation commands
 d-i preseed/late_command string \
@@ -106,8 +93,7 @@ d-i preseed/late_command string \
     sed -i 's/#PasswordAuthentication yes/PasswordAuthentication no/' /target/etc/ssh/sshd_config ; \
     sed -i 's/#PubkeyAuthentication yes/PubkeyAuthentication yes/' /target/etc/ssh/sshd_config ; \
     sed -i 's/#AuthorizedKeysFile/AuthorizedKeysFile/' /target/etc/ssh/sshd_config ; \
-    echo "PermitRootLogin no" >> /target/etc/ssh/sshd_config ; \
-    systemctl enable ssh
+    echo "PermitRootLogin no" >> /target/etc/ssh/sshd_config
 
 ### Finishing up the installation
 d-i finish-install/reboot_in_progress note
