--- a/thinkpad-alex/preseed.cfg
+++ b/thinkpad-alex/preseed.cfg
@@ -33,13 +33,13 @@ d-i clock-setup/ntp boolean true
 
 ### Early command to wipe disk
 d-i partman/early_command string \
-    debconf-set partman-auto/disk "$(list-devices disk | head -n1)" ; \
-    DISK="$(list-devices disk | head -n1)" ; \
-    dd if=/dev/zero of=$DISK bs=1M count=10 ; \
-    parted -s $DISK mklabel gpt
+    DISK=$(cat /proc/partitions | grep -E '(sd[a-z]|nvme[0-9]n[0-9]|vd[a-z])$' | head -n1 | awk '{print "/dev/" $4}') ; \
+    [ -n "$DISK" ] && dd if=/dev/zero of=$DISK bs=1M count=10 2>/dev/null || true ; \
+    [ -n "$DISK" ] && /usr/sbin/parted -s $DISK mklabel gpt || true
 
 ### Partitioning - UEFI compatible
-# Let the early command set the disk
+# Automatically select the first detected disk
+d-i partman-auto/disk string /dev/sda /dev/nvme0n1 /dev/vda
 d-i partman-auto/method string regular
 
 # Force GPT for UEFI
@@ -48,10 +48,10 @@ d-i partman-basicfilesystems/default_label string gpt
 d-i partman-partitioning/choose_label string gpt
 d-i partman-partitioning/default_label string gpt
 
-# Simple atomic recipe that should work with UEFI
+# Simple atomic recipe
 d-i partman-auto/choose_recipe select atomic
 
-# Alternative: force all confirmations
+# Confirmations
 d-i partman-efi/non_efi_system boolean true
 d-i partman-partitioning/confirm_write_new_label boolean true
 d-i partman/choose_partition select finish
