--- a/thinkpad-alex/preseed.cfg
+++ b/thinkpad-alex/preseed.cfg
@@ -31,36 +31,19 @@ d-i clock-setup/utc boolean true
 d-i time/zone string Europe/Stockholm
 d-i clock-setup/ntp boolean true
 
-### Early command to wipe disk
-d-i partman/early_command string \
-    DISK=$(cat /proc/partitions | grep -E '(sd[a-z]|nvme[0-9]n[0-9]|vd[a-z])$' | head -n1 | awk '{print "/dev/" $4}') ; \
-    [ -n "$DISK" ] && dd if=/dev/zero of=$DISK bs=1M count=10 2>/dev/null || true ; \
-    [ -n "$DISK" ] && /usr/sbin/parted -s $DISK mklabel gpt || true
-
-### Partitioning - UEFI compatible
+### Partitioning - Simple approach
 # Automatically select the first detected disk
 d-i partman-auto/disk string /dev/sda /dev/nvme0n1 /dev/vda
 d-i partman-auto/method string regular
 
-# Force GPT for UEFI
-d-i partman-basicfilesystems/choose_label string gpt
-d-i partman-basicfilesystems/default_label string gpt
-d-i partman-partitioning/choose_label string gpt
-d-i partman-partitioning/default_label string gpt
-
-# Simple atomic recipe
+# Use entire disk with guided partitioning - let installer handle UEFI
 d-i partman-auto/choose_recipe select atomic
 
-# Confirmations
-d-i partman-efi/non_efi_system boolean true
+# Allow the installer to create new partition table
 d-i partman-partitioning/confirm_write_new_label boolean true
 d-i partman/choose_partition select finish
 d-i partman/confirm boolean true
 d-i partman/confirm_nooverwrite boolean true
-d-i partman-md/confirm boolean true
-d-i partman-md/confirm_nooverwrite boolean true
-d-i partman-lvm/confirm boolean true
-d-i partman-lvm/confirm_nooverwrite boolean true
 
 ### Base system installation
 d-i base-installer/install-recommends boolean true
