automatically confirm UEFI installation

--- a/thinkpad-alex/preseed.cfg
+++ b/thinkpad-alex/preseed.cfg
@@ -39,6 +39,9 @@ d-i partman-auto/method string regular
 # Use entire disk with guided partitioning - let installer handle UEFI
 d-i partman-auto/choose_recipe select atomic
 
+# UEFI installation confirmation
+d-i partman-efi/non_efi_system boolean true
+
 # Allow the installer to create new partition table
 d-i partman-partitioning/confirm_write_new_label boolean true
 d-i partman/choose_partition select finish
